--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,20 +12,28 @@ jobs:
             - v1-dependencies-{{ checksum "package.json" }}
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
-      - run: npm install
+       - run: npm install
       - save_cache:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
       - setup_remote_docker
-      - run: docker login -u $DOCKER_USERNAME --password-stdin $DOCKER_PASSWORD
-      - run: 
-          name: "Build docker image and push to ducker hub"
+      - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
+      - run:
+          name: "Build docker image and push to docker hub"
           command: |
-              cp Dockerfile Dockerfile
-              docker build -t puidts/workshop:latest .
-              docker build -t puidts/workshop:${CIRCLE_SHA1} .
-              docker push puidts/workshop:latest
-              docker push puidts/workshop:${CIRCLE_SHA1}
+            if [ "${CIRCLE_BRANCH}" == "master" ]; then
+              cp Dockerfile.production Dockerfile
+              docker build -t ima8/example-nodejs-circle:latest .
+              docker build -t ima8/example-nodejs-circle:${CIRCLE_SHA1} .
+              docker push ima8/example-nodejs-circle:latest
+              docker push ima8/example-nodejs-circle:${CIRCLE_SHA1}
+            elif [ "${CIRCLE_BRANCH}" == "staging" ]; then
+              cp Dockerfile.staging Dockerfile
+              docker build -t ima8/example-nodejs-circle-staging:latest .
+              docker push ima8/example-nodejs-circle-staging:latest
+            else
+              echo "This is ${CIRCLE_BRANCH}"
+            fi
       - run: echo Done
               
