--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,6 +39,32 @@ jobs:
             else
               echo "This is ${CIRCLE_BRANCH}"
             fi
+      - run:
+          name: "Call to rancher to deploy"
+          command: |
+            if [ "${CIRCLE_BRANCH}" == "master" ]; then
+              docker run --rm -it \
+                -e CATTLE_ACCESS_KEY="$CATTLE_ACCESS_KEY" \
+                -e CATTLE_SECRET_KEY="$CATTLE_SECRET_KEY" \
+                -e CATTLE_URL="$CATTLE_URL" \
+                etlweather/gaucho upgrade $RANCHER_EXAMPLE_NODEJS \
+                --imageUuid 'puidts/workshop:latest' \
+                --batch_size 3 --start_first \
+                --auto_complete --timeout 600 \
+                /
+            elif [ "${CIRCLE_BRANCH}" == "staging" ]; then
+               docker run --rm -it \
+                -e CATTLE_ACCESS_KEY="$CATTLE_ACCESS_KEY" \
+                -e CATTLE_SECRET_KEY="$CATTLE_SECRET_KEY" \
+                -e CATTLE_URL="$CATTLE_URL" \
+                etlweather/gaucho upgrade $RANCHER_EXAMPLE_NODEJS_STAGING \
+                --imageUuid 'docker:puidts/workshop:latest' \
+                --batch_size 1 --start_first \
+                --auto_complete --timeout 600 \
+                /
+            else
+              echo "This is ${CIRCLE_BRANCH}"
+            fi
       - run: echo Done
 
               
