--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,7 +57,7 @@ jobs:
                 -e CATTLE_ACCESS_KEY="$CATTLE_ACCESS_KEY" \
                 -e CATTLE_SECRET_KEY="$CATTLE_SECRET_KEY" \
                 -e CATTLE_URL="$CATTLE_URL" \
-                etlweather/gaucho upgrade $RANCHER_EXAMPLE_NODEJS_STAGING \
+                etlweather/gaucho upgrade $RANCHER_EXAMPLE_NODEJS \
                 --imageUuid 'docker:puidts/workshop:latest' \
                 --batch_size 1 --start_first \
                 --auto_complete --timeout 600 \
