--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,6 +39,7 @@ jobs:
             else
               echo "This is ${CIRCLE_BRANCH}"
             fi
+      - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
       - run:
           name: "Call to rancher to deploy"
           command: |
