--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,6 @@ jobs:
             else
               echo "This is ${CIRCLE_BRANCH}"
             fi
-      - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
       - run:
           name: "Call to rancher to deploy"
           command: |
@@ -48,7 +47,7 @@ jobs:
                 -e CATTLE_ACCESS_KEY="$CATTLE_ACCESS_KEY" \
                 -e CATTLE_SECRET_KEY="$CATTLE_SECRET_KEY" \
                 -e CATTLE_URL="$CATTLE_URL" \
-                pui-dts/gaucho upgrade $RANCHER_EXAMPLE_NODEJS \
+                etlweather/gaucho upgrade $RANCHER_EXAMPLE_NODEJS \
                 --imageUuid 'puidts/workshop:latest' \
                 --batch_size 3 --start_first \
                 --auto_complete --timeout 600 \
@@ -58,7 +57,7 @@ jobs:
                 -e CATTLE_ACCESS_KEY="$CATTLE_ACCESS_KEY" \
                 -e CATTLE_SECRET_KEY="$CATTLE_SECRET_KEY" \
                 -e CATTLE_URL="$CATTLE_URL" \
-                pui-dts/gaucho upgrade $RANCHER_EXAMPLE_NODEJS \
+                etlweather/gaucho upgrade $RANCHER_EXAMPLE_NODEJS \
                 --imageUuid 'docker:puidts/workshop:latest' \
                 --batch_size 1 --start_first \
                 --auto_complete --timeout 600 \
